--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -1,86 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The First meeting Session</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The First meeting Session</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"
+            />
+    </head>
 
-<body>
-    <header>
-        <a class="logo" href="/"><img class="logo_img" height="75px" src="imgs/logo.png" alt="logo"></a>
+    <body>
+        <header>
+            <a class="logo" href="/"><img class="logo_img" height="75px"
+                    src="imgs/logo.png" alt="logo"></a>
+            <nav>
+                <ul class="nav__links">
+                    <li><a onclick="window.location.href='/sponser'">Sponsers</a></li>
+                    <li><a onclick="window.location.href='/ftc'">FTC</a></li>
+                    <li><a onclick="window.location.href='/team'">Team</a></li>
+                </ul>
+            </nav>
+            <a class="cta"> Sponser us!
+                <div class="icon">
+                    💸
+                </div>
+            </a>
 
-        <nav>
-            <ul class="nav__links">
-                <li><a onclick="window.location.href='/blogs'">Blogs</a></li>
-                <li><a href=" #">FTC</a></li>
-                <li><a href="#">Team</a></li>
-            </ul>
-        </nav>
+            <p style="padding: 3%;" class="menu"><span class="
+                    material-symbols-outlined">menu</span></p>
+        </header>
 
-        <a class="cta"> Sponser us!
-            <div class="icon"> 💸 </div>
-        </a>
-
-        <p style="padding: 3%;" class="menu"><span class=" material-symbols-outlined">menu</span></p>
-    </header>
-
-    <div id="mobile__menu" class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-            <a href="#">Sponsers</a>
-            <a href="#">FTC</a>
-            <a href="#">Team</a>
-        </div>
-    </div>
-    </div>
-
-    <div style="width: 100%;">
-        <div style="margin:auto;padding: 10px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>December 4th 2022</h2>
-            <h1 style="font-size: 5rem;">The First meeting session</h1>
-        </div>
-        <br>
-        <img style="    border-radius: 35px; width: 85%;
-            " src="imgs/blogs/blog1.jpg" alt="" srcset="">
-        <br>
-        <br>
-        <div style="margin:auto;padding:50px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>On Sunday, the 4th of December Team Legogoa Axiom gathered at the house of our mentor, Saieesh Gandhi to
-                discuss and understand the format, scoring system and components of the game. <br>
-
-                With excellent presentations made by Viraj, Aniket, Sai Pranav and Vighnesh, helped us to understand
-                rules of the game and triggered our thinking about our strategy in the tournament. <br>
-
-                We are also very excited that the parts will be arriving in a few days time and we can build and program
-                our robot soon. <br>
-
-                Our former website designed and put together by Aditya and Taksh went live. <br>
-
-                Our young instructors Venkatesh, Shounak and Dhruv conducted a robotics workshop and raised ₹6000 to
-                contribute to our sponsorship and hope to raise much more. <br>
-                - Written By Aditya Pai</h2>
+        <div id="mobile__menu" class="overlay">
+            <a class="close">&times;</a>
+            <div class="overlay__content">
+                <a onclick="window.location.href='/sponser'">Sponsers</a>
+                <a onclick="window.location.href='/ftc'">FTC</a>
+                <a onclick="window.location.href='/team'">Team</a>
+            </div>
         </div>
 
-    </div>
 
-    <script src="https://kit.fontawesome.com/3b366c8bb1.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="mobile.js"></script>
+        <div style="width: 100%;">
+            <div style="margin:auto;padding: 10px;
+                border-radius: 35px;
+                width: 85% ;
+                overflow: hidden;
+                background-color: #ffdd58;">
+                <h2>December 4th 2022</h2>
+                <h1 style="font-size: 5rem;">The First meeting session</h1>
+            </div>
+            <br>
+            <img style=" border-radius: 35px; width: 85%;
+                " src="imgs/blogs/blog1.jpg" alt="" srcset="">
+            <br>
+            <br>
+            <div style="margin:auto;padding:50px;
+                border-radius: 35px;
+                width: 85% ;
+                overflow: hidden;
+                background-color: #ffdd58;">
+                <h2>On Sunday, the 4th of December Team Legogoa Axiom gathered
+                    at the house of our mentor, Saieesh Gandhi to
+                    discuss and understand the format, scoring system and
+                    components of the game. <br>
+
+                    With excellent presentations made by Viraj, Aniket, Sai
+                    Pranav and Vighnesh, helped us to understand
+                    rules of the game and triggered our thinking about our
+                    strategy in the tournament. <br>
+
+                    We are also very excited that the parts will be arriving in
+                    a few days time and we can build and program
+                    our robot soon. <br>
+
+                    Our former website designed and put together by Aditya and
+                    Taksh went live. <br>
+
+                    Our young instructors Venkatesh, Shounak and Dhruv conducted
+                    a robotics workshop and raised ₹6000 to
+                    contribute to our sponsorship and hope to raise much more.
+                    <br>
+                    - Written By Aditya Pai</h2>
+            </div>
+
+        </div>
+
+        <script src="https://kit.fontawesome.com/3b366c8bb1.js"
+            crossorigin="anonymous"></script>
+        <script type="text/javascript" src="mobile.js"></script>
 
 
-</body>
+    </body>
 
 </html>
