--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -1,94 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The First meeting Session</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blog 2</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"
+            />
 
 
-</head>
+    </head>
 
-<body>
+    <body>
 
 
-    <header>
-        <a class="logo" href="/"><img class="logo_img" height="75px" src="imgs/logo.png" alt="logo"></a>
-        <nav>
-            <ul class="nav__links">
-                <li><a onclick="window.location.href='/blogs'">Blogs</a></li>
-                <li><a href=" #">FTC</a></li>
-                <li><a href="#">Team</a></li>
-            </ul>
-        </nav>
-        <a class="cta"> Sponser us!
-            <div class="icon">
-                💸
+        <header>
+            <a class="logo" href="/"><img class="logo_img" height="75px"
+                    src="imgs/logo.png" alt="logo"></a>
+            <nav>
+                <ul class="nav__links">
+                    <li><a onclick="window.location.href='/sponser'">Sponsers</a></li>
+                    <li><a onclick="window.location.href='/ftc'">FTC</a></li>
+                    <li><a onclick="window.location.href='/team'">Team</a></li>
+                </ul>
+            </nav>
+            <a class="cta"> Sponser us!
+                <div class="icon">
+                    💸
+                </div>
+            </a>
+
+            <p style="padding: 3%;" class="menu"><span class="
+                    material-symbols-outlined">menu</span></p>
+        </header>
+
+        <div id="mobile__menu" class="overlay">
+            <a class="close">&times;</a>
+            <div class="overlay__content">
+                <a onclick="window.location.href='/sponser'">Sponsers</a>
+                <a onclick="window.location.href='/ftc'">FTC</a>
+                <a onclick="window.location.href='/team'">Team</a>
             </div>
-        </a>
-
-        <p style="padding: 3%;" class="menu"><span class=" material-symbols-outlined">menu</span></p>
-    </header>
-
-    <div id="mobile__menu" class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-            <a href="#">Sponsers</a>
-            <a href="#">FTC</a>
-            <a href="#">Team</a>
-        </div>
-    </div>
-    </div>
-    <div style="width: 100%;">
-        <div style="margin:auto;padding: 10px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>December 9th 2022</h2>
-            <h1 style="font-size: 3rem;">FUND-RAISING INITIATIVE: Conducting Robotics Workshops in Goa</h1>
-
         </div>
 
-        <br>
+        <div style="width: 100%;">
+            <div style="margin:auto;padding: 10px;
+                border-radius: 35px;
+                width: 85% ;
+                overflow: hidden;
+                background-color: #ffdd58;">
+                <h2>December 9th 2022</h2>
+                <h1 style="font-size: 3rem;">FUND-RAISING INITIATIVE: Conducting
+                    Robotics Workshops in Goa</h1>
 
-        <div style="margin:auto;padding:50px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>On Sunday, the 4th of December Team Legogoa Axiom gathered at the house of our mentor, Saieesh Gandhi to
-                discuss and understand the format, scoring system and components of the game. <br>
+            </div>
 
-                With excellent presentations made by Viraj, Aniket, Sai Pranav and Vighnesh, helped us to understand
-                rules of the game and triggered our thinking about our strategy in the tournament. <br>
 
-                We are also very excited that the parts will be arriving in a few days time and we can build and program
-                our robot soon. <br>
+            <br>
+            <img style=" border-radius: 35px; width: 85%;
+                " src="imgs/blogs/blog2.jpg" alt="" srcset="">
+            <br>
+            <br>
 
-                Our former website designed and put together by Aditya and Taksh went live. <br>
+            <div style="margin:auto;padding:50px;
+                border-radius: 35px;
+                width: 85% ;
+                overflow: hidden;
+                background-color: #ffdd58;">
+                <h2>In the true spirit of FIRST, three team members of Legogoa
+                    Axi0m 22855 decided to combine outreach and raising funds
+                    into one event and they did it successfully by conducting a
+                    nominally paid robotics workshop called “Explore the World
+                    of Robotics.
+                    <br>
+                    <br>
+                    The team members, Venkatesh Dempo, Shounak Hede and Dhruv
+                    Desai (aka Team VSD) conducted their first workshop on 4th
+                    December, 2022 at Goa's capital city of Panaji and their
+                    second workshop on 8th December, 2022 at Margao. 12 students
+                    each in the age group of 7 to 13 years attended the
+                    workshop. The duration of the workshop was 3 hours and each
+                    student was charged a fee of Rs. 500.
+                    <br>
+                    <br>
+                    The workshop started with a brief introduction of the
+                    trainers and the purpose of the workshop and FTC. The
+                    participants were made aware of the basics of coding through
+                    a Powerpoint presentation. The participants were then taught
+                    to create a robot using Lego EV3 kit and then program the
+                    robot to perform a specific task.
+                    <br>
+                    <br>
+                    The aim of the workshops was to create awareness and
+                    enthusiasm amongst young participants about the world of
+                    Robotics and to give them hands-on experience in assembling
+                    a robot and coding it. The participants displayed keen
+                    interest in learning and exploring new things.
+                    <br>
+                    <br>
+                    In true spirit of FIRST the trio raised Rs 12,000/- for the
+                    team via the fees received from the participants.
+                    <br>
+                    <br>
+                    The workshops were well appreciated by young participants
+                    and their parents. The trio thanked the participants for
+                    supporting their initiative of fundraising for the FTC
+                    championship.</h2>
+            </div>
 
-                Our young instructors Venkatesh, Shounak and Dhruv conducted a robotics workshop and raised ₹6000 to
-                contribute to our sponsorship and hope to raise much more. <br>
-                - Written By Aditya Pai</h2>
+            <br>
+            <br>
+
         </div>
 
+
+
+
+        <script src="https://kit.fontawesome.com/3b366c8bb1.js"
+            crossorigin="anonymous"></script>
+        <script type="text/javascript" src="mobile.js"></script>
         <br>
-        <br>
 
-    </div>
-
-
-
-
-    <script src="https://kit.fontawesome.com/3b366c8bb1.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="mobile.js"></script>
-    <br>
-
-</body>
+    </body>
 
 </html>
