--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     src="imgs/logo.png" alt="logo"></a>
             <nav>
                 <ul class="nav__links">
-                    <li><a onclick="window.location.href='/blogs'">Blogs</a></li>
+                    <li><a onclick="window.location.href='/sponser'">Sponsers</a></li>
                     <li><a href=" #">FTC</a></li>
                     <li><a href="#">Team</a></li>
                 </ul>
@@ -104,63 +104,69 @@
     <br>
     <br>
 
-    <h1 style="font-size: 4rem;">Blogs</h1>
+    <div style="margin:auto;padding: 10px;
+        border-radius: 35px;
+        width: 85% ;
+        overflow: hidden;
+        background-color: #ffdd58;">
+        <h1 style="font-size: 4rem;">Blogs</h1>
 
 
-    <section class="hero-section">
+        <section class="hero-section">
 
-        <br>
-        <div class="card-grid">
-            <a class="card" href="/blog1">
-                <div class="card__background" style="background-image:
-                    url(imgs/blogs/blog1.jpg)">
-                </div>
-                <div class="card__content">
-                    <p class="card__category">4th December</p>
-                    <h3 class="card__heading">The First Meeting Session</h3>
-                </div>
-            </a>
-            <a class="card" href="/blog2">
-                <div class="card__background" style="background-image:
-                    url(imgs/blogs/blog2.jpg)">
-                </div>
-                <div class="card__content">
-                    <p class="card__category">9th December</p>
-                    <h3 class="card__heading">Fundraising initiatives
-
-                    </h3>
-                </div>
-            </a>
-            <a class="card" href="/blog3">
-                <div class="card__background" style="background-image:
-                    url(imgs/blogs/blog3.jpg)">
-                </div>
-                <div class="card__content">
-                    <p class="card__category">17th December</p>
-                    <h3 class="card__heading">GitHub 1st training session</h3>
-                </div>
-                <a class="card" href="/blog4">
+            <br>
+            <div class="card-grid">
+                <a class="card" href="/blog1">
                     <div class="card__background" style="background-image:
-                        url(imgs/blogs/blog4.jpg)">
+                        url(imgs/blogs/blog1.jpg)">
+                    </div>
+                    <div class="card__content">
+                        <p class="card__category">4th December</p>
+                        <h3 class="card__heading">The First Meeting Session</h3>
+                    </div>
+                </a>
+                <a class="card" href="/blog2">
+                    <div class="card__background" style="background-image:
+                        url(imgs/blogs/blog2.jpg)">
+                    </div>
+                    <div class="card__content">
+                        <p class="card__category">9th December</p>
+                        <h3 class="card__heading">Fundraising initiatives
+
+                        </h3>
+                    </div>
+                </a>
+                <a class="card" href="/blog3">
+                    <div class="card__background" style="background-image:
+                        url(imgs/blogs/blog3.jpg)">
                     </div>
                     <div class="card__content">
                         <p class="card__category">17th December</p>
-                        <h3 class="card__heading">Having Fun</h3>
+                        <h3 class="card__heading">GitHub 1st training session</h3>
                     </div>
-                </a>
-                <a class="card" href="/blog4">
-                    <div class="card__background" style="background-image:
-                        url(imgs/blogs/blog4.jpg)">
-                    </div>
-                    <div class="card__content">
-                        <p class="card__category">17th December</p>
-                        <h3 class="card__heading">Having Fun</h3>
-                    </div>
-                </a>
-            </li>
-            <div>
+                    <a class="card" href="/blog4">
+                        <div class="card__background" style="background-image:
+                            url(imgs/blogs/blog4.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">17th December</p>
+                            <h3 class="card__heading">Having Fun</h3>
+                        </div>
+                    </a>
+                    <a class="card" href="/blog4">
+                        <div class="card__background" style="background-image:
+                            url(imgs/blogs/blog4.jpg)">
+                        </div>
+                        <div class="card__content">
+                            <p class="card__category">17th December</p>
+                            <h3 class="card__heading">Having Fun</h3>
+                        </div>
+                    </a>
+                </li>
+                <div>
 
-            </section>
+                </section>
+            </div>
             <br>
             <footer>
                 <h3 style="font-size: 2rem; text-align: center;">©️ Legogoa
