--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -1,15 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Github Session</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"
+            />
 
-<body>
-    sfd
-</body>
+
+    </head>
+
+    <body>
+
+
+        <header>
+            <a class="logo" href="/"><img class="logo_img" height="75px"
+                    src="imgs/logo.png" alt="logo"></a>
+            <nav>
+                <ul class="nav__links">
+                    <li><a onclick="window.location.href='/sponser'">Sponsers</a></li>
+                    <li><a onclick="window.location.href='/ftc'">FTC</a></li>
+                    <li><a onclick="window.location.href='/team'">Team</a></li>
+                </ul>
+            </nav>
+            <a class="cta"> Sponser us!
+                <div class="icon">
+                    💸
+                </div>
+            </a>
+
+            <p style="padding: 3%;" class="menu"><span class="
+                    material-symbols-outlined">menu</span></p>
+        </header>
+
+        <div id="mobile__menu" class="overlay">
+            <a class="close">&times;</a>
+            <div class="overlay__content">
+                <a onclick="window.location.href='/sponser'">Sponsers</a>
+                <a onclick="window.location.href='/ftc'">FTC</a>
+                <a onclick="window.location.href='/team'">Team</a>
+            </div>
+        </div>
+
+        <div style="width: 100%;">
+            <div style="margin:auto;padding: 10px;
+                border-radius: 35px;
+                width: 85% ;
+                overflow: hidden;
+                background-color: #ffdd58;">
+                <h2>December 17th 2022</h2>
+                <h1 style="font-size: 3rem;">Github session By Anay Kamat</h1>
+            </div>
+
+
+            <br>
+            <img style=" border-radius: 35px; width: 85%;
+                " src="imgs/blogs/blog3.jpg" alt="" srcset="">
+            <br>
+            <br>
+
+            <div style="margin:auto;padding:50px;
+                border-radius: 35px;
+                width: 85% ;
+                overflow: hidden;
+                background-color: #ffdd58;">
+                <h2>We were thinking of building a website which includes
+                    everyone's collaboration. Our team coach Saieesh Sir
+                    introduced us to GitHub and planned training sessions.
+                    <br>
+                    On 17th December our first training session on GitHub. In
+                    GitHub, everyone in a team can collaborate. It includes all
+                    the records of how the team had constructed a website
+                    i.e.how many have contributed. It also shows when and what
+                    changes a teammate has created on the website. Yesterday's
+                    session was just an introduction. We also built a small
+                    website using HTML.
+                    <br>
+                    The session was conducted by Shri Anay Kamat
+                    This is the link to view the meeting:
+                    https://youtu.be/suaQeftg5Pg
+                    <br>
+                    -Written By Aniket Bhatikar
+
+                </h2>
+            </div>
+
+            <br>
+            <br>
+
+        </div>
+
+
+
+
+        <script src="https://kit.fontawesome.com/3b366c8bb1.js"
+            crossorigin="anonymous"></script>
+        <script type="text/javascript" src="mobile.js"></script>
+        <br>
+
+    </body>
 
 </html>
