--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <h3 style="font-size: 2rem; text-align: center;">©️ Legogoa
                     Axiom
                     2022</h3>
-                <h3 style="font-size: 2rem; text-align: center;">ftclegogoa@gamil.com</h3>
+                <h3 style="font-size: 2rem; text-align: center;">ftclegogoa@gmail.com</h3>
             </footer>
             <br>
             <script src="https://kit.fontawesome.com/3b366c8bb1.js"
